# docsee-gui

./: .dockerignore  .gitignore  Dockerfile  README.md  SVELTE5_MIGRATION.md  biome.json  docker-compose.yml  native-dev.sh  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tailwind.config.js.backup  test-containers.svelte  vite.config.js
.backup/: working-dashboard.svelte
.github/workflows/: ci.yml  release.yml
scripts/: release.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/commands/: container_commands.rs  image_commands.rs  mod.rs  network_commands.rs  system_commands.rs  volume_commands.rs
src-tauri/src/docker/: client.rs  compose.rs  containers.rs  events.rs  images.rs  mod.rs  networks.rs  stats.rs  system.rs  volumes.rs
src-tauri/src/models/: mod.rs
src-tauri/src/terminal/: mod.rs
src-tauri/src/utils/: error.rs  logger.rs  mod.rs
src/lib/: utils.ts
src/lib/components/: DebugPanel.svelte  TestComponent.svelte  ThemeToggle.svelte
src/lib/hooks/: useContainerActions.ts  useDockerConnection.ts  useKeyboardShortcuts.ts  useRealTimeStats.ts
src/lib/services/: docker-api.ts  notifications.ts  tauri-commands.ts  websocket.ts
src/lib/stores/: containers.svelte.ts  containers.ts  docker.svelte.ts  docker.ts  images.svelte.ts  images.ts  logs.ts  networks.svelte.ts  networks.ts  notifications.ts  settings.svelte.ts  settings.ts  stats.ts  system.ts  theme.ts  (+4 more)
src/routes/: +layout.svelte  +layout.ts  +page.svelte
(+102 files in other folders)
